feat(app): finish drum application :sparkles:

--- a/index.html
+++ b/index.html
@@ -11,23 +11,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/png" href="images/bateria.png">
+    <link rel="icon" type="image/png" href="assets/images/bateria.png">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 
 </head>
 <body>
-    <h1>Alura Midi</h1>
+    <h1>Drum</h1>
 
     <section class="teclado">
         <button class="tecla tecla_pom">Pom</button>
         <button class="tecla tecla_clap">Clap</button>
         <button class="tecla tecla_tim">Tim</button>
-
         <button class="tecla tecla_puff">Puff</button>
         <button class="tecla tecla_splash">Splash</button>
         <button class="tecla tecla_toim">Toim</button>
-
         <button class="tecla tecla_psh">Psh</button>
         <button class="tecla tecla_tic">Tic</button>
         <button class="tecla tecla_tom">Tom</button>
